# ThinkingRoot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  WORLD_FASTEST.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench-nightly.yml  ci.yml  publish-crates.yml  publish-pypi.yml  release.yml
crates/thinkingroot-bench/: Cargo.toml
crates/thinkingroot-bench/benches/load/: mcp_tools.js  mixed_workload.js  rest_entities.js  rest_search.js  run_load_test.sh
crates/thinkingroot-bench/benches/macro/: cache_effectiveness.rs  pipeline_e2e.rs  stage_timing.rs
crates/thinkingroot-bench/benches/micro/: cache_queries.rs  graph_queries.rs  parser_throughput.rs  serialization.rs  vector_search.rs
crates/thinkingroot-bench/src/: fixtures.rs  lib.rs  scale.rs
crates/thinkingroot-branch/: Cargo.toml
crates/thinkingroot-branch/src/: branch.rs  diff.rs  lib.rs  lock.rs  merge.rs  snapshot.rs
crates/thinkingroot-branch/tests/: branch_tests.rs
crates/thinkingroot-cli/: Cargo.toml
crates/thinkingroot-cli/src/: branch_cmd.rs  eval_cmd.rs  main.rs  mcp_config.rs  pipeline.rs  progress.rs  provider_cmd.rs  serve.rs  setup.rs  update_cmd.rs  watch.rs  workspace.rs
crates/thinkingroot-cli/tests/: integration.rs
crates/thinkingroot-compile/: Cargo.toml
crates/thinkingroot-compile/src/: compiler.rs  lib.rs  templates.rs
crates/thinkingroot-core/: Cargo.toml
crates/thinkingroot-core/src/: config.rs  error.rs  global_config.rs  id.rs  ir.rs  lib.rs
crates/thinkingroot-core/src/types/: artifact.rs  branch.rs  claim.rs  contradiction.rs  diff.rs  entity.rs  mod.rs  relation.rs  source.rs  workspace.rs
crates/thinkingroot-extract/: Cargo.toml
crates/thinkingroot-extract/src/: batch.rs  cache.rs  events.rs  extractor.rs  focused_prompts.rs  graph_context.rs  lib.rs  llm.rs  prompts.rs  router.rs  scheduler.rs  schema.rs  structural.rs
crates/thinkingroot-graph/: Cargo.toml
crates/thinkingroot-graph/src/: graph.rs  lib.rs  storage.rs  vector.rs
crates/thinkingroot-ground/: Cargo.toml
crates/thinkingroot-ground/src/: dedup.rs  grounder.rs  lexical.rs  lib.rs  nli.rs  semantic.rs  span.rs
crates/thinkingroot-link/: Cargo.toml
crates/thinkingroot-link/src/: lib.rs  linker.rs  relation_dedup.rs  resolution.rs
crates/thinkingroot-parse/: Cargo.toml
crates/thinkingroot-parse/src/: code.rs  git.rs  lib.rs  manifest.rs  markdown.rs  pdf.rs  walker.rs
crates/thinkingroot-safety/: Cargo.toml
crates/thinkingroot-safety/src/: lib.rs
crates/thinkingroot-serve/: Cargo.toml
crates/thinkingroot-serve/src/: engine.rs  fingerprint.rs  galaxy.html  graph.html  graph.rs  graph_cache.rs  lib.rs  pipeline.rs  rest.rs
crates/thinkingroot-serve/src/intelligence/: augmenter.rs  planner.rs  react.rs  reranker.rs  retriever.rs  router.rs  synthesizer.rs  temporal.rs
crates/thinkingroot-serve/src/mcp/: mod.rs  resources.rs  sse.rs  stdio.rs  tools.rs
crates/thinkingroot-serve/tests/: rest_test.rs
crates/thinkingroot-verify/: Cargo.toml
crates/thinkingroot-verify/src/: verifier.rs
docs/: 2026-04-08-engram-knowledge-compiler-design.md
docs/superpowers/plans/: 2026-04-09-phase2-serve-sdk.md  2026-04-13-benchmark-testing-suite.md
docs/superpowers/specs/: 2026-04-13-benchmark-testing-design.md
tests/fixtures/sample-repo/docs/: architecture.md
tests/fixtures/sample-repo/src/: auth.rs
thinkingroot-python/: Cargo.toml  pyproject.toml
thinkingroot-python/python/thinkingroot/: __init__.py  _thinkingroot.pyi  client.py
thinkingroot-python/src/: lib.rs
