[workspace]
resolver = "2"
members = [
    "crates/thinkingroot-core",
    "crates/thinkingroot-graph",
    "crates/thinkingroot-parse",
    "crates/thinkingroot-extract",
    "crates/thinkingroot-link",
    "crates/thinkingroot-compile",
    "crates/thinkingroot-verify",
    "crates/thinkingroot-serve",
    "crates/thinkingroot-safety",
    "crates/thinkingroot-branch",
    "crates/thinkingroot-ground",
    "crates/thinkingroot-cli",
    "crates/thinkingroot-bench",
    "thinkingroot-python",
]
# thinkingroot-python is a PyO3 cdylib that must be built via maturin.
# Excluded from default-members so `cargo build` / `cargo test` don't try to
# link it without Python headers.  `cargo check --workspace` still validates it.
default-members = [
    "crates/thinkingroot-core",
    "crates/thinkingroot-graph",
    "crates/thinkingroot-parse",
    "crates/thinkingroot-extract",
    "crates/thinkingroot-link",
    "crates/thinkingroot-compile",
    "crates/thinkingroot-verify",
    "crates/thinkingroot-serve",
    "crates/thinkingroot-safety",
    "crates/thinkingroot-branch",
    "crates/thinkingroot-ground",
    "crates/thinkingroot-cli",
    "crates/thinkingroot-bench",
]

[workspace.package]
version = "0.9.1"
edition = "2024"
authors = ["Naveen <naveen@thinkingroot.dev>"]
license = "MIT"
repository = "https://github.com/DevbyNaveen/ThinkingRoot"
homepage = "https://thinkingroot.dev"
documentation = "https://docs.thinkingroot.dev"
rust-version = "1.91"
keywords = ["knowledge-compiler", "ai-agents", "mcp", "memory", "knowledge-graph"]
categories = ["development-tools", "database", "parser-implementations"]

[workspace.dependencies]
# Internal crates
thinkingroot-core    = { path = "crates/thinkingroot-core",    version = "0.9.0" }
thinkingroot-graph   = { path = "crates/thinkingroot-graph",   version = "0.9.0", default-features = false }
thinkingroot-parse   = { path = "crates/thinkingroot-parse",   version = "0.9.0" }
thinkingroot-extract = { path = "crates/thinkingroot-extract", version = "0.9.0" }
thinkingroot-link    = { path = "crates/thinkingroot-link",    version = "0.9.0" }
thinkingroot-compile = { path = "crates/thinkingroot-compile", version = "0.9.0" }
thinkingroot-verify  = { path = "crates/thinkingroot-verify",  version = "0.9.0" }
thinkingroot-serve   = { path = "crates/thinkingroot-serve",   version = "0.9.0", default-features = false }
thinkingroot-safety  = { path = "crates/thinkingroot-safety",  version = "0.9.0" }
thinkingroot-branch  = { path = "crates/thinkingroot-branch",  version = "0.9.0", default-features = false }
thinkingroot-ground  = { path = "crates/thinkingroot-ground",  version = "0.9.0", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"

# Async
tokio = { version = "1.51", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
blake3 = "1"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
dirs = "5"
dialoguer = "0.11"

# Graph DB (Datalog-based, embedded, community edition)
cozo = { package = "cozo-ce", version = "0.7.13-alpha.3", default-features = false, features = ["minimal", "rayon"] }

# Parsing
pulldown-cmark = "0.13"
tree-sitter = "0.26"

# LLM (multi-provider via our own trait)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"

# Templates
tera = "1"

# HTTP (for serve)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
regex = "1"
glob = "0.3"
ignore = "0.4"
notify = "8"
notify-debouncer-mini = "0.6"
strsim = "0.11"
unicode-segmentation = "1.12"
ordered-float = { version = "5", features = ["serde"] }
tokio-stream = "0.1"

# Benchmarking
criterion = { version = "0.6", default-features = false, features = ["html_reports"] }
divan = "0.1"
rand = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = true
lto = "thin"
