[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "thinkingroot"
version = "0.1.0"
description = "Knowledge compiler for AI agents — Python SDK"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "thinkingroot._thinkingroot"
