[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "thinkingroot"
dynamic = ["version"]
description = "Knowledge compiler for AI agents — Python SDK"
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Naveen", email = "naveen@thinkingroot.dev" }]
keywords = ["knowledge-graph", "ai", "llm", "mcp", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://thinkingroot.dev"
Repository = "https://github.com/thinkingroot/thinkingroot"
Documentation = "https://docs.thinkingroot.dev"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "thinkingroot._thinkingroot"
