[package]
name = "thinkingroot-branch"
description = "Knowledge Version Control (KVC) — branching and merging for ThinkingRoot knowledge graphs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }
thinkingroot-verify = { workspace = true }
blake3 = "1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["vector"]
vector = ["thinkingroot-graph/vector"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
