[package]
name = "thinkingroot-compile"
description = "Stage 4: Artifact compilation for ThinkingRoot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tera = { workspace = true }
