[package]
name = "thinkingroot-core"
description = "Core types and data model for the ThinkingRoot knowledge compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
ordered-float = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
