[package]
name = "thinkingroot-graph"
description = "Graph and vector storage for ThinkingRoot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thinkingroot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
cozo = { workspace = true }

fastembed = "5"

[dev-dependencies]
tempfile = "3"
