[package]
name = "thinkingroot-ground"
description = "Write-time hallucination prevention: 3-judge grounding tribunal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
## Enable Judge 3 (embedding cosine similarity) + Judge 4 (NLI entailment)
## via fastembed/ort/tokenizers. Without this, only Judges 1+2 (pure string
## ops) are active.
vector = ["dep:thinkingroot-graph", "dep:ort", "dep:tokenizers", "dep:dirs"]

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-extract = { workspace = true }
unicode-segmentation = { workspace = true }
tracing = { workspace = true }

# Optional: Judges 3+4 need fastembed/ort for ML inference.
thinkingroot-graph = { workspace = true, optional = true }
ort = { version = "2.0.0-rc.11", optional = true, default-features = false }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
dirs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
