[package]
name = "thinkingroot-parse"
description = "Stage 1: Parsers for the ThinkingRoot compilation pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[dependencies]
thinkingroot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
pulldown-cmark = { workspace = true }
tree-sitter = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }

# Tree-sitter language grammars
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Extended language support (14 new languages)
tree-sitter-java       = "0.23.5"
tree-sitter-c          = "0.24.1"
tree-sitter-cpp        = "0.23.4"
tree-sitter-c-sharp    = "0.23.1"
tree-sitter-ruby       = "0.23.1"
tree-sitter-kotlin-ng  = "1.1.0"
tree-sitter-swift      = "0.7.1"
tree-sitter-php        = "0.24.2"
tree-sitter-bash       = "0.25.1"
tree-sitter-lua        = "0.5.0"
tree-sitter-scala      = "0.25.0"
tree-sitter-elixir     = "0.3.5"
tree-sitter-haskell    = "0.23.1"
tree-sitter-r          = "1.2.0"

pdf-extract = "0.7"

[dev-dependencies]
tempfile = "3"
