[package]
name = "thinkingroot-serve"
description = "Stage 6: REST API and MCP server for ThinkingRoot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
## Enable vector/semantic search. Disable with --no-default-features to build
## lightweight test binaries that don't link fastembed + ONNX Runtime.
default = ["vector"]
vector = ["thinkingroot-graph/vector"]

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }
thinkingroot-parse = { workspace = true }
thinkingroot-extract = { workspace = true }
thinkingroot-link = { workspace = true }
thinkingroot-compile = { workspace = true }
thinkingroot-verify = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
